--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.6",
     "express": "^4.22.1",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "socket.io": "^4.7.5"
   }
 }
