--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,8 @@
 {
-  "name": "ollama-backend",
   "type": "module",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
   "dependencies": {
     "cors": "^2.8.6",
-    "express": "^4.22.1",
-    "node-fetch": "^3.3.2",
-    "nodemon": "^3.1.11",
-    "socket.io": "^4.7.5"
+    "express": "^5.2.1",
+    "node-fetch": "^3.3.2"
   }
 }
