--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,13 @@
   "dependencies": {
     "cors": "^2.8.6",
     "express": "^5.2.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "socket.io": "^4.8.0",
+    "@google/generative-ai": "^0.21.0",
+    "dotenv": "^16.4.5"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "dev": "node --watch index.js"
   }
 }
