--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,11 @@
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.11",
     "socket.io": "^4.7.5"
-  }
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
